# foundation-voice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  env.template  models.py  pyproject.toml  requirements.txt  setup.py  ws_client.py
.github/workflows/: main.yml  ruff.yml
agent/: agent.py
agent_configure/config/: basic_agent.json
custom_plugins/frames/: frames.py
custom_plugins/services/openai_agents/: llm.py
custom_plugins/services/openai_agents/agents_sdk/: handler.py
custom_plugins/services/openai_agents/agents_sdk/utils/: tools.py
docs/: CONNECTION_LIFECYCLE.md
examples/: main.py
examples/agent_configure/config/: agent_config.json  basic_agent.json  config_with_keys.json  language_agent.json  leap_config.json  sip_config.json
examples/agent_configure/utils/: callbacks.py  context.py  new_tools.py  tool.py
examples/templates/: sip_streams.xml
examples/utils/: __init__.py  sip_utils.py
examples/websocket/client/src/: app.ts
examples/websocket/server/: server.py
foundation_voice/: __init__.py  lib.py  main.py  models.py
foundation_voice/agent/: agent.py  cleanup.py  run.py
foundation_voice/custom_plugins/: agent_callbacks.py
foundation_voice/custom_plugins/frames/: frames.py
foundation_voice/custom_plugins/processors/aggregators/: agent_context.py
foundation_voice/custom_plugins/services/guardrailed_cerebras/: guardrail_llm.py  llm_based_guardrail.py
foundation_voice/custom_plugins/services/openai_agents/: llm.py
foundation_voice/custom_plugins/services/openai_agents/agents_sdk/: __init__.py  agent.py  custom_hook.py  handler.py
foundation_voice/custom_plugins/services/openai_agents/agents_sdk/utils/: chunks.py  models.py  tools.py
foundation_voice/custom_plugins/services/sip/: base_service.py
foundation_voice/custom_plugins/services/sip/livekitSIP/: router.py  service.py
foundation_voice/custom_plugins/services/smallest/: tts.py
foundation_voice/models/: schemas.py
foundation_voice/routers/: agent_router.py
foundation_voice/scripts/: ingest.py
foundation_voice/services/: agent_services.py
foundation_voice/utils/: agent_file_generator.py  api_utils.py  callbacks_utils.py  daily_helpers.py  file_generator.py  function_adapter.py  llm_prompts.py  metrics_context.py  provider_utils.py  templates.py  vector_db.py  webhook_sender.py
foundation_voice/utils/helpers/: daily_helpers.py  livekit_helpers.py
foundation_voice/utils/idle_processor/: llm_idle_processor.py  user_idle_processor.py
foundation_voice/utils/inhouse_tools/: tools.py
foundation_voice/utils/observers/: __init__.py  call_summary_metrics_observer.py  func_observer.py  user_bot_latency_log_observer.py
foundation_voice/utils/preemptive_processor/: enhanced_preemptive_processor.py  preemptive_processor.py
foundation_voice/utils/providers/: __init__.py  llm_provider.py  stt_provider.py  tts_provider.py  vad_provider.py
foundation_voice/utils/transcripts/: transcript_handler.py
foundation_voice/utils/transport/: connection_manager.py  exotel_transport.py  livekit_transport.py  session_manager.py  sip_detection.py  transport.py
foundational-ai-server/: MANIFEST.in  pyproject.toml
foundational-ai-server/agent_configure/config/: config2.json
foundational-ai-server/custom_plugins/processors/aggregators/: agent_context.py
foundational-ai-server/custom_plugins/services/openai_agents/agents_sdk/: agent.py
foundational-ai-server/utils/observers/: user_bot_latency_log_observer.py
foundational-ai-server/utils/providers/: llm_provider.py
foundational-ai-server/utils/transcripts/: transcript_handler.py
foundational_ai_server/: lib.py
foundational_ai_server/agent/: agent.py  run.py
foundational_ai_server/agent_configure/config/: agent_config.json  basic_agent.json  config1.json
foundational_ai_server/agent_configure/utils/: callbacks.py  tool.py
foundational_ai_server/custom_plugins/: agent_callbacks.py
foundational_ai_server/custom_plugins/processors/aggregators/: agent_context.py
foundational_ai_server/custom_plugins/services/openai/: llm.py
foundational_ai_server/custom_plugins/services/openai_agents/: llm.py
foundational_ai_server/custom_plugins/services/openai_agents/agents_sdk/: agent.py  handler.py
foundational_ai_server/custom_plugins/services/smallest/: tts.py
foundational_ai_server/utils/idle_processor/: user_idle_processor.py
foundational_ai_server/utils/observers/: func_observer.py
foundational_ai_server/utils/providers/: llm_provider.py  tts_provider.py
foundational_ai_server/utils/transcripts/: transcript_handler.py
foundational_ai_server/utils/transport/: __init__.py  connection_manager.py
knowledge_base_documents/: product_info.txt
src/: main.py
src/agent_configure/config/: agent_config.json  config_with_keys.json
src/agent_configure/utils/: context.py
src/utils/transcripts/: transcript_handler.py
utils/: __init__.py  config_loader.py
utils/observers/: call_summary_metrics_observer.py
utils/providers/: vad_provider.py
utils/transport/: connection_manager.py  session_manager.py  transport.py
