[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundation_voice"
version = "0.1.0"
authors = [
    { name="Aniket-think41" }
]
description = "Core package for Open Source CAI Pipecat - foundation voice"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ai", "pipecat", "open-source", "foundation-voice"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "litellm",
    "livekit_api",
    "python-dotenv",
    "uvicorn",
    "alembic",
    "sqladmin",
    "SQLAlchemy",
    "sqlmodel",
    "asyncpg",
    "ruff",
    "deepgram-sdk",
    "pydantic_settings",
    "mcp",
    "pipecat-ai[cartesia,daily,openai,silero,webrtc,deepgram,websocket]",
    "pipecat-ai-small-webrtc-prebuilt",
    "av",
    "websockets",
    "openai-agents",
    "pydantic-ai[logfire]",
    "smallestai"
]

[project.urls]
"Homepage" = "https://github.com/think41/foundation-voice.git" # Please update if this is not the correct repository URL

[project.scripts]
"foundation-voice-cli" = "foundation_voice.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["foundation_voice*"]
exclude = ["examples*"]
# MANIFEST.in will be used due to include_package_data=True being default or set by setup.py

